SF Primes/src/objects/Deployment_Test__c.object
<CustomObject>
    <fields>
        <fullName>Test_Field_01__c</fullName>
        <label>Test Field 01</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Field_02__c</fullName>
        <label>Test Field 02</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Field_03__c</fullName>
        <label>Test Field 03</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>Deployment Test</label>
    <nameField>
        <label>Deployment Test Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deployment Tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>